# spend-sleuth

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
.claude/: settings.json
src/spend_sleuth/: cli.py  db.py  load.py
