[project]
name = "spend-sleuth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Eckel", email = "7268277+jonathan-eckel@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.0",
    "duckdb>=1.5.3",
    "pandas>=3.0.3",
]

[project.scripts]
spend-sleuth = "spend_sleuth.cli:cli"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
